--- a/myweb.html
+++ b/myweb.html
@@ -4,7 +4,7 @@
 	<title>My Website</title>
 </head>
 <body>
-	<h1>Welcome to my website!</h1>
-	<p>This is a simple website created using HTML.</p>
+	<h1>Welcome to my wedsite!</h1>
+	<p>This is a website created by me using HTML.</p>
 </body>
 </html>
